removed fixed height causing modal to overflow

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,7 +54,6 @@ $lightGray: #979797;
 .explore-card {
   z-index: 9999;
   max-width: 580px;
-  height: 702px;
   box-shadow: 0 0 10px 7px rgba(0, 0, 0, 0.3);
   background-color: $white;
 }
@@ -133,8 +132,7 @@ button:focus {
     margin-left: -5px;
   }
   .plus-btn {
-    width: 30px;
-    height: 30px;
+    width: 40px;
   }
   .social-icons {
     width: 58px;
@@ -149,8 +147,7 @@ button:focus {
     margin-left: -5px;
   }
   .plus-btn {
-    width: 30px;
-    height: 30px;
+    width: 40px;
   }
   .social-icons {
     width: 58px;
